refactor: extract repository helpers and validators to reduce code duplication