@@ -2,7 +2,6 @@ package ma.ensa.apms.service.impl;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -21,6 +20,7 @@ import ma.ensa.apms.modal.UserStory;
 import ma.ensa.apms.repository.EpicRepository;
 import ma.ensa.apms.repository.UserStoryRepository;
 import ma.ensa.apms.service.EpicService;
+import ma.ensa.apms.service.helper.EpicRepositoryHelper;
 
 @Service
 @RequiredArgsConstructor
@@ -31,10 +31,7 @@ public class EpicServiceImpl implements EpicService {
     private final EpicMapper epicMapper;
     private final UserStoryMapper userStoryMapper;
     private final ProductBacklogMapper productBacklogMapper;
-
-    private int getUserStoriesCount(Epic epic) {
-        return epic.getUserStories() != null ? epic.getUserStories().size() : 0;
-    }
+    private final EpicRepositoryHelper epicRepositoryHelper;
 
     @Override
     @Transactional
@@ -45,9 +42,9 @@ public class EpicServiceImpl implements EpicService {
 
     @Override
     public EpicResponse findById(UUID id) {
-        Epic epic = getEpicById(id);
+        Epic epic = epicRepositoryHelper.findByIdOrThrow(id);
         EpicResponse response = epicMapper.toDto(epic);
-        response.setUserStoriesCount(getUserStoriesCount(epic));
+        response.setUserStoriesCount(epicRepositoryHelper.getUserStoriesCount(epic));
         return response;
     }
 
@@ -56,16 +53,16 @@ public class EpicServiceImpl implements EpicService {
         return epicRepository.findAll().stream()
                 .map(epic -> {
                     EpicResponse response = epicMapper.toDto(epic);
-                    response.setUserStoriesCount(getUserStoriesCount(epic));
+                    response.setUserStoriesCount(epicRepositoryHelper.getUserStoriesCount(epic));
                     return response;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional
     public EpicResponse update(UUID id, EpicRequest dto) {
-        Epic epic = getEpicById(id);
+        Epic epic = epicRepositoryHelper.findByIdOrThrow(id);
         epicMapper.updateEntityFromDto(dto, epic);
         return epicMapper.toDto(epicRepository.save(epic));
     }
@@ -73,16 +70,15 @@ public class EpicServiceImpl implements EpicService {
     @Override
     @Transactional
     public void delete(UUID id) {
-        Epic epic = getEpicById(id);
+        Epic epic = epicRepositoryHelper.findByIdOrThrow(id);
         epicRepository.delete(epic);
     }
 
     @Override
     @Transactional
     public EpicResponse addUserStoryToEpic(UUID epicId, UUID userStoryId) {
-        Epic epic = getEpicById(epicId);
-        UserStory userStory = userStoryRepository.findById(userStoryId)
-                .orElseThrow(() -> new ResourceNotFoundException("UserStory not found with id: " + userStoryId));
+        Epic epic = epicRepositoryHelper.findByIdOrThrow(epicId);
+        UserStory userStory = epicRepositoryHelper.findUserStoryByIdOrThrow(userStoryId);
 
         userStory.setEpic(epic);
         userStoryRepository.save(userStory);
@@ -90,22 +86,17 @@ public class EpicServiceImpl implements EpicService {
         return epicMapper.toDto(epic);
     }
 
-    private Epic getEpicById(UUID id) {
-        return epicRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Epic not found with id: " + id));
-    }
-
     @Override
     public List<UserStoryResponse> getUserStoriesByEpicId(UUID epicId) {
-        Epic epic = getEpicById(epicId);
+        Epic epic = epicRepositoryHelper.findByIdOrThrow(epicId);
         return epic.getUserStories().stream()
                 .map(userStoryMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public ProductBacklogResponse getProductBacklogByEpicId(UUID epicId) {
-        Epic epic = getEpicById(epicId);
+        Epic epic = epicRepositoryHelper.findByIdOrThrow(epicId);
         if (epic.getProductBacklog() == null) {
             throw new ResourceNotFoundException("No product backlog is associated with epic id: " + epicId);
         }
